here goes nothin

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@ Make sure you use good BEM-style class names for each element in your components
     <title>Jim Cooper</title>
 </head>
 <body>
+    <header>
+        <div class="social_media">
+            <a href="https://twitter.com/repjimcooper"><img class="social" src="images/twitter.png" alt="twitter logo"/></a>
+            <a href="https://www.facebook.com/JimCooper"> <img class="social" src="images/facebook.png" alt="facebook logo"/></a>
+            <a href="https://www.instagram.com/repjimcooper/#"><img class="social" src="images/instagram.png" alt="instagram icon"/></a> 
+        </div> 
+    </header>
     <!-- This is the main content of my page -->
     <article class="jim_cooper">
         <section class="info">
@@ -29,8 +36,8 @@ Make sure you use good BEM-style class names for each element in your components
             <!-- This is an image with a description.-->
             <img src="https://www.govtrack.us/static/legislator-photos/400081-200px.jpeg" alt = "Jim Cooper"/>  
             <!-- I put this information in paragraphs. I debated on making it an unordered list but two unordered lists seemed weird to me -->
-             <p class="info_district"><strong>Congressional District:</strong> Tennessee's 5th </p>
-            <p class="info_affiliation"><strong>Political Affiliation:</strong> Democrat</p>
+             <p class="info_district"><strong>CONGRESSIONAL DISTRICT:</strong> Tennessee's 5th </p>
+            <p class="info_affiliation"><strong>POLITICAL AFFILIATION:</strong> Democrat</p>
         </section>
         <aside>
         <!-- New section!!!! -->
@@ -57,12 +64,6 @@ Make sure you use good BEM-style class names for each element in your components
             </section>
     </aside>
     </article>
-    <footer>
-        <div class="social_media">
-            <a href="https://twitter.com/repjimcooper"><img class="social" src="images/twitter.png" alt="twitter logo"/></a>
-            <a href="https://www.facebook.com/JimCooper"> <img class="social" src="images/facebook.png" alt="facebook logo"/></a>
-            <a href="https://www.instagram.com/repjimcooper/#"><img class="social" src="images/instagram.png" alt="instagram icon"/></a> 
-        </div> 
-    </footer>
+    
 </body>
 </html>
