--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ Make sure you use good BEM-style class names for each element in your components
 
 
     <div class= "image-and-text">
-        <img class="banner" src="images/banner.jpeg" alt="skyline banner" />>
+        <img class="banner" src="images/banner.jpeg" alt="skyline banner" />
+    </div>
     
          <div class="centered">
            <h1> Jim Cooper </h1>
@@ -51,15 +52,14 @@ Make sure you use good BEM-style class names for each element in your components
             <img src="https://www.govtrack.us/static/legislator-photos/400081-200px.jpeg" alt = "Jim Cooper"/>  
             <!-- I put this information in paragraphs. I debated on making it an unordered list but two unordered lists seemed weird to me -->
             <div class="caption">
-                <p class="info_district"><strong>CONGRESSIONAL DISTRICT:</strong> Tennessee's 5th </p>
-                <p class="info_affiliation"><strong>POLITICAL AFFILIATION:</strong> Democrat</p>
+                <p class="info_district"><strong> DEMOCRATIC REPRESENTATIVE OF TENNESSEE'S 5th CONGRESSIONAL DISTRICT:</strong> 5th </p>
             </div>  
         </section>
         <aside>
         <!-- New section!!!! -->
             <section>
             <!-- This is a header for this section. it is h2 because it is less important than the main header -->
-             <h2>Committees</h2>
+             <h2>COMMITTEES</h2>
                 <!-- This is an unordered list of committees -->
                  <ul class="committees">
                         <li class="committee">House Committee on Armed Services</li>
@@ -68,7 +68,7 @@ Make sure you use good BEM-style class names for each element in your components
                     </ul>
             </section>
             <section class="legislation">
-                <h2>Legislation</h2>
+                <h2>LEGISLATION</h2>
                 <ul class="legislation">
                     <li><a href="https://www.govtrack.us/congress/bills/112/hr482">H.R. 482 (112th): Water Heater Rating Improvement Act of 2011</a></li>
                     <li><a href="https://www.govtrack.us/congress/bills/110/hr928">H.R. 928 (110th): Inspector General Reform Act of 2008 </a></li>
